# calendar-webscraper

./: .gitattributes  .gitignore  CLAUDE.md  Pipfile  README.md  colors.yaml  create_gcal_events.py  main.py  pyproject.toml  requirements.txt  ssb.html  test.py
.github/: README.md
.github/workflows/: ci.yml  config-rollover.yml  execute-script.yml
calendar-configs/: _config-template.yaml  config-blls.yaml  config-dumpling-dunkers.yaml  config-dumpling-dunkers.yaml.disable  config-leteam.yaml  config-leteam.yaml.disable  config-older-milennials.yaml  config-red-dogs.yaml  config-shake-shaq.yaml  config-wet-as-pullup.yaml
docs/superpowers/plans/: 2026-07-08-wordpress-api-migration.md  2026-07-10-rollover-pages-restructure.md
docs/superpowers/specs/: 2026-07-10-rollover-pages-restructure-design.md
gcalendar-configs/: _config-template.yaml
helpers/: ascii_strings.py  config_loader.py  decorator.py  event_sync.py  excel_parser.py  html_parser.py  models.py  sources.py
libs/: google_cal_client.py  ical_client.py  scraper_client.py
src/: check_rollover.py  main.py
src/helpers/: config_loader.py  html_parser.py  rollover.py  site_builder.py
src/libs/: google_cal_client.py  scraper_client.py
tests/: conftest.py  test_config_loader.py  test_event_sync.py  test_google_cal_client.py  test_html_parser.py  test_rollover.py  test_scraper_client.py  test_site_builder.py  test_sources.py
